# AutoCalQualityJpeg

./: calSSIM.py  createLabel.py  dataset.py  demo.py  genFeaters.py  train.py
cproject/: CMakeLists.txt  model.pt  readme.md  test.cpp
project/: Net.py  api.py  model_epoch_100.pth
